# adbear

./: .git-blame-ignore-revs  .gitattributes  Cargo.toml  README.md  dist-workspace.toml  flake.nix  rust-toolchain.toml
.github/: renovate.json5
.github/workflows/: flake-lock-maintenance.yml  release.yml  test.yml
src/: main.rs
src/adb_commands/: mod.rs
src/password/: mod.rs
src/scanning/: mod.rs
wix/: main.wxs
