[package]
name = "adbear"
version = "0.1.1"
edition = "2021"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
repository = "https://github.com/msfjarvis/adbear"
description = "CLI to enable ADB pairing over WiFi"
homepage = "https://msfjarvis.github.io/adbear"
license = "MIT OR Apache-2.0"

[package.metadata.wix]
upgrade-guid = "4E187D2A-9BA1-43B8-9B51-A6D94C057E96"
path-guid = "A674A774-C585-4AFE-AE20-B38CEE15C4A8"
license = false
eula = false

[dependencies]
anyhow = "1.0.89"
fast_qr = "0.12.5"
mdns-sd = { version = "0.12.0", default-features = false, features = ["async"] }
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "msfjarvis/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = true
