[package]
name = "adbear"
version = "0.1.1"
edition = "2021"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
repository = "https://github.com/msfjarvis/adbear"
description = "CLI to enable ADB pairing over WiFi"
homepage = "https://msfjarvis.github.io/adbear"
license = "MIT OR Apache-2.0"

[package.metadata.wix]
upgrade-guid = "4E187D2A-9BA1-43B8-9B51-A6D94C057E96"
path-guid = "A674A774-C585-4AFE-AE20-B38CEE15C4A8"
license = false
eula = false

[[bin]]
name = "adb-wifi"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
fast_qr = "0.13.0"
mdns-sd = { version = "0.13.0", default-features = false, features = ["async"] }
rand = "0.9.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
